<resources>
    <string name="app_name">资本魔方炒股大赛</string>
    <string name="action_settings">Settings</string>
    <string name="head">这里是HeadView</string>
    <string name="loading">正在加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="load_fail1">网络连接失败，请检查网络</string>
    <string name="getting_yzm">验证码获取中</string>
    <string name="yzm_err">验证码获取失败</string>
    <string name="registerr">注册失败</string>
    <string name="loging">正在登陆</string>
    <string name="registing">正在注册</string>
    <string name="registok">注册成功</string>
    <string name="resetting">正在重置密码</string>
    <string name="logerr">登录失败 账号或密码错误</string>
    <string name="chaing">切换用户中</string>
    <string name="chaee">切换失败</string>
    <string name="focuserr">关注失败</string>
    <string name="focusok">关注成功</string>
    <string name="unfocuserr">取消失败</string>
    <string name="unfocusok">取消成功</string>
    <string name="submitting">正在提交</string>
    <string name="apply_tip">正在提交报名信息</string>
    <string name="withdrawing">正在撤销委托</string>
    <string name="withdraw_tip1">撤销成功</string>
    <string name="withdraw_tip2">撤销失败</string>
    <string name="focus_getting">正在获取关注列表</string>
    <string name="submit_edit">正在提交修改</string>
    <string name="m_getting">正在获取我的比赛列表</string>
    <string name="record_getting">正在读取获奖记录</string>
    <string name="stock_detail_getting">正在获取股票详情</string>
    <string name="hold_getting">正在获取该持仓列表</string>
    <string name="trans_getting">正在交易记录列表</string>
    <string name="clearing">正在清除缓存</string>
    <string name="contentDescription">Description</string>
    <string name="login">登录</string>
    <string name="get_pwd">找回密码</string>
    <string name="registe">注册</string>
    <string name="register">注册账号</string>
    <string name="register1">注册账号>></string>
    <string name="return_login">已有账号登录</string>
    <string name="other_login">使用合作网站登录</string>
    <string name="edit">编辑</string>
    <string name="name">用户名</string>
    <string name="pwd">密码</string>
    <string name="pwd_tip">请输入密码（6位以上）</string>
    <string name="phone_num">手机号码</string>
    <string name="phone_num_tip">请输入手机号码</string>
    <string name="yzm">验证码</string>
    <string name="yzm_tip">请输入验证码</string>
    <string name="get_yzm">获取验证码</string>
    <string name="create_account">创建账号</string>
    <string name="return_account_login">已有账号返回登录</string>
    <string name="reset_pwd">立即重置密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="input_pwd_tip">请输入大于6位的密码</string>
    <string name="resetsuccess">重置密码成功</string>
    <string name="access_error">访问异常,请稍后再试</string>
    <string name="getuserinfo">获取用户信息</string>
    <string name="gc">广场</string>
    <string name="hq">行情</string>
    <string name="wdbs">我的比赛</string>
    <string name="tz">投资+</string>
    <string name="more">更多</string>
    <string name="server_fail">服务器连接失败，请稍后重试...</string>
    <string name="net_tip">世界上最远的距离就是没网。</string>
    <string name="check_setting">检查设置</string>
    <string name="home_tip1">资本魔方已经成功举办</string>
    <string name="home_tip2">个比赛</string>
    <string name="all_match">全部比赛</string>
    <string name="classicmatch">经典比赛</string>
    <string name="addmatch">申请比赛</string>
    <string name="isplayer">已参赛</string>
    <string name="isover">已结束</string>
    <string name="applyover">报名结束</string>
    <string name="noplayer">未参赛</string>
    <string name="rank">排名第</string>
    <string name="all_money">总资产：</string>
    <string name="all_money1">总资产</string>
    <string name="all_sy">总收益</string>
    <string name="paiming">排名</string>
    <string name="more_match">快去发现更多比赛</string>
    <string name="no_match">无参加比赛信息</string>
    <string name="add_match">立即参加比赛</string>
    <string name="title_activity_match_desc">MatchDescActivity</string>
    <string name="intro">简介</string>
    <string name="board">公告</string>
    <string name="bangdan">榜单</string>
    <string name="buy">买</string>
    <string name="sale">卖</string>
    <string name="join_game">报名参赛</string>
    <string name="match_tip2">人参加</string>
    <string name="match_tip1">已有</string>
    <string name="match_tip3">本次大赛奖品由举办方提供</string>
    <string name="match_tip4">无奖品信息</string>
    <string name="sperator">一</string>
    <string name="apply_time">报名时间：</string>
    <string name="start_time">比赛时间：</string>
    <string name="init_many">比赛起始资金：</string>
    <string name="find_more">快去发现更多比赛</string>
    <string name="quick_search">快速搜索</string>
    <string name="free">免费</string>
    <string name="invite_match">邀请赛</string>
    <string name="new_heigh">飞跃新的高度</string>
    <string name="match_game">模拟炒股大奖赛</string>
    <string name="title_activity_join_match">JoinMatchActivity</string>
    <string name="apply_tip1">填写比赛报名信息</string>
    <string name="apply_tip2">建议填写真实信息，便于奖品发放</string>
    <string name="apply">提交报名</string>
    <string name="truename">真实姓名</string>
    <string name="input_truename">请输入真实姓名</string>
    <string name="input_answer">请输入答案</string>
    <string name="answer">答案</string>
    <string name="question">问题</string>
    <string name="invite_code">邀请码</string>
    <string name="apply_tip3">该手机号已经报名该比赛,请使用\n新的手机号码报名参赛。</string>
    <string name="yzm_ok">获取验证码成功</string>
    <string name="reverfiy">重新验证</string>
    <string name="miao">秒</string>
    <string name="phone_tip1">请输入手机号</string>
    <string name="phone_tip2">请输入正确的手机号</string>
    <string name="err_answer">问题回答错误！</string>
    <string name="input_code">请输入邀请码</string>
    <string name="optional">自选股</string>
    <string name="quotation_tip">暂无自选股，现在去添加</string>
    <string name="del">删除</string>
    <string name="close_p">昨日收盘：</string>
    <string name="open_p">开盘价：</string>
    <string name="amount">成交额：</string>
    <string name="high_p">最高价：</string>
    <string name="low_p">最低价：</string>
    <string name="volumn">成交量：</string>
    <string name="add">添加</string>
    <string name="option_del">自选股删除成功！</string>
    <string name="option_add">自选股添加成功！</string>
    <string name="cancel">取消</string>
    <string name="goset">去设置</string>
    <string name="user">用户</string>
    <string name="quotation">股票</string>
    <string name="match">比赛</string>
    <string name="activity">活动</string>
    <string name="appstore">积分商城</string>
    <string name="about">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="change_user">切换用户</string>
    <string name="mfb">魔方宝</string>
    <string name="gzrs">关注人数</string>
    <string name="about_us">关于我们</string>
    <string name="cjwt">常见问题</string>
    <string name="feedback">反馈</string>
    <string name="feedback1">意见反馈</string>
    <string name="share">分享</string>
    <string name="add_account">添加账号</string>
    <string name="account_m">账号管理</string>
    <string name="about_uu">资本魔方致力于打造一个可以找到各类炒股实战专家，便捷的进行投资交流和利用平台专属服务进行投资指导、学习成长的专业股票网站。</string>
    <string name="myfocus">我的关注</string>
    <string name="unfocus">取消关注</string>
    <string name="focus">关注</string>
    <string name="feedback_tip">感谢支持，请简要描述你的意见和建议</string>
    <string name="input_tip22">%1$d/500</string>
    <string name="submit">提交</string>
    <string name="submit_tip">已成功提交您的反馈</string>
    <string name="issue">常见问题</string>
    <string name="bgz">被关注</string>
    <string name="weituo">委托</string>
    <string name="holder">持仓</string>
    <string name="jyjl">交易记录</string>
    <string name="opreat">操作记录</string>
    <string name="award">获奖记录</string>
    <string name="record">获奖记录</string>
    <string name="takephoto">拍摄一张照片</string>
    <string name="selectphoto">从相册中选择</string>
    <string name="nickname">昵称</string>
    <string name="inputnickname">请输入昵称</string>
    <string name="save">保存</string>
    <string name="perinfo">修改信息</string>
    <string name="get1">获得</string>
    <string name="day_y">日榜</string>
    <string name="week_y">周榜</string>
    <string name="total_y">总榜</string>
    <string name="trusts_name">名称</string>
    <string name="trusts_type">委托类型</string>
    <string name="trusts_count">数量</string>
    <string name="trusts_price">委托价格</string>
    <string name="trusts_money">冻结金额</string>
    <string name="trusts_date">委托时间</string>
    <string name="trust_tip">没有委托数据</string>
    <string name="trust_tip1">委托成功</string>
    <string name="trust_tip2">委托数量不能超过可持仓数量的一半</string>
    <string name="trust_tip3">正在提交委托</string>
    <string name="hold_tip">没有持仓数据</string>
    <string name="record_tip">暂无获奖记录，继续加油哦</string>
    <string name="record_count">共获奖%1$s次</string>
    <string name="trans_tip">没有交易记录</string>
    <string name="can_buy_number">可买:</string>
    <string name="sear_tip3">请输入要搜索的股票代码</string>
    <string name="sear_tip2">请输入用户关键字</string>
    <string name="sear_tip1">请输入要搜索的比赛</string>
    <string name="cbj">成本价：</string>
    <string name="syl">收益率：</string>
    <string name="cjj">成交价:%1$s</string>
    <string name="tran_num">数量:%1$s</string>
    <string name="buy_in">买入</string>
    <string name="sell_out">卖出</string>
    <string name="pay_tip1">您已有%1$s个魔方宝</string>
    <string name="logexcpeion">登陆异常</string>
    <string name="revoke">撤销</string>
    <string name="revoke_tip">确定要撤销委托</string>
    <string name="revoke_tip1">卖出[%1$s]%1$s股</string>
    <string name="select_tip">请选择比赛</string>
    <string name="seesee">查看</string>
    <string name="running">进行中</string>
    <string name="finished">已结束</string>
    <string name="shengm"><u>免责声明</u></string>
    <string name="shengmi">免责声明</string>
    <string name="eidt_succ">修改成功</string>
    <string name="mine_match_tip">没有参加的比赛</string>
    <string name="quotation_getting">正在获取大盘数据</string>
    <string name="prompt">提示</string>
    <string name="exit">退出</string>
    <string name="exit_prompt">退出应用</string>
    <string name="my_weituo">我的委托</string>
    <string name="my_hold">我的持仓</string>
    <string name="clear_tip">缓存清除成功</string>
    <string name="clear_tip1">清除失败</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="head_tipsTextView">下拉即可更新</string>
    <string name="head_lastUpdatedTextView">最后更新: 2013/03/11 下午05:07:52</string>
    <string name="more_data">正在加载数据...</string>
    <string name="pull_to_refresh_pull_label">@string/pull_to_refresh</string>
    <string name="pull_to_refresh_pull_up_label">@string/pullup_to_load</string>
    <string name="pull_to_refresh_release_label">@string/release_to_refresh</string>
    <string name="pull_to_refresh_refreshing_label">@string/refreshing</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_pull_up_label">@string/pull_to_refresh_pull_up_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="sear_his_tip">以下为历史搜索记录</string>
</resources>