<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:background="@color/ca"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:text="@string/match"
        android:textAppearance="@style/TextAppear.Theme.cb_Size17" />

    <include layout="@layout/line_cd"></include>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:text="@string/user"
        android:textAppearance="@style/TextAppear.Theme.cb_Size17" />

    <include layout="@layout/line_cd"></include>
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:paddingRight="5dp"
        android:text="@string/quotation"
        android:textAppearance="@style/TextAppear.Theme.cb_Size17" />

    <include layout="@layout/line_cd"></include>
</LinearLayout>
