<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="17dp">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tip1"
            android:textAppearance="@style/TextAppear.Theme.cb_Size18" />

        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textColor="#ff3a3a"
            android:text="88" android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tip2"
            android:textAppearance="@style/TextAppear.Theme.cb_Size18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/ll"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/shape_layout_red"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_all"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/all_match"
            android:textColor="@color/ca"
            android:textSize="19sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/btn_classic"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/classicmatch"

            android:textColor="@color/ca"
            android:textSize="19sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#fff" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="@string/addmatch"

            android:textColor="@color/ca"
            android:textSize="19sp"/>
    </LinearLayout>

</RelativeLayout>